[package]
name = "bmp280-server"
version = "0.1.0"
authors = ["Aatif Syed <aatifsyedyp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme280 = { git = "https://github.com/aatifsyed/bme280-rs", rev = "776fdaf", features = ["with-std", "serde"]}
error-chain = "0.12.4"
hyper = "0.14.4"
linux-embedded-hal = "0.3.0"
serde = "1.0.123"
serde_json = "1.0.62"
structopt = "0.3.21"
tokio = { version = "1.2.0", features=["macros", "net", "rt-multi-thread",] }
